--- a/App01.VLC/Themes/Generic.xaml
+++ b/App01.VLC/Themes/Generic.xaml
@@ -3,8 +3,6 @@
                     xmlns:md3="http://materialdesigninxaml.net/winfx/xaml/themes"
                     xmlns:ct="clr-namespace:App01.VLC.Controls">
 
-    <md3:BrushOpacityConverter x:Key="BrushOpacityConverter" />
-
     <Style TargetType="{x:Type ct:ClickableTextBlock}">
         <Setter Property="Template">
             <Setter.Value>
@@ -20,7 +18,7 @@
                                         <Style.Triggers>
                                             <Trigger Property="IsMouseOver" Value="True">
                                                 <Setter Property="Background"
-                                                        Value="{Binding Foreground, RelativeSource={RelativeSource Self}, Converter={StaticResource BrushOpacityConverter}, ConverterParameter=0.16}" />
+                                                        Value="{Binding Foreground, RelativeSource={RelativeSource Self}, Converter={x:Static md3:BrushOpacityConverter.Instance}, ConverterParameter=0.16}" />
                                             </Trigger>
                                         </Style.Triggers>
                                     </Style>
