--- a/App01.VLC/Views/MainWindow.xaml
+++ b/App01.VLC/Views/MainWindow.xaml
@@ -75,7 +75,7 @@
                                         </Border.Triggers>
                                         <Grid Background="{DynamicResource MaterialDesign.Brush.Chip.Background}">
                                             <Border x:Name="PART_Root" Opacity="0.2"
-                                                    Background="{Binding Foreground, ElementName=PART_Title, Converter={StaticResource BrushOpacityConverter}, ConverterParameter=0.2}" />
+                                                    Background="{Binding Foreground, ElementName=PART_Title, Converter={x:Static md3:BrushOpacityConverter.Instance}, ConverterParameter=0.2}" />
 
                                             <Grid Height="120" Width="180">
                                                 <Grid.RowDefinitions>
